--- a/v2/webroot/index.html
+++ b/v2/webroot/index.html
@@ -11,11 +11,12 @@
 <body>
     <div>
         <ul class="nav nav-tabs" role="tablist">
-            <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-bs-toggle="tab" href="#tab-1">Systems</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#tab-1">Systems</a></li>
             <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#tab-2">Reports</a></li>
+            <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-bs-toggle="tab" href="#tab-3">Data</a></li>
         </ul>
         <div class="tab-content">
-            <div class="tab-pane active" role="tabpanel" id="tab-1">
+            <div class="tab-pane" role="tabpanel" id="tab-1">
                 <div class="container">
                     <div class="row" style="height: 20px;"></div>
                     <div class="row" style="height: 140px;">
@@ -41,9 +42,17 @@
                     <div class="row"></div>
                 </div>
             </div>
-            <div class="tab-pane" role="tabpanel" id="tab-3"></div>
+            <div class="tab-pane active" role="tabpanel" id="tab-3">
+                <div class="container">
+                    <div class="row">
+                        <div class="col" id="DataTabCol1"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+    <div class="container"></div>
+    <div class="container"></div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="/js/mermaid.tiny.js"></script>
